Layout issue

--- a/default.css
+++ b/default.css
@@ -88,25 +88,25 @@ ul>li:hover{
     font-weight: bold;
 }
 
-.snip1226 {
+.nav-links {
     font-family: 'Roboto',sans-serif;
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
   }
-  .snip1226 * {
+  .nav-links * {
     box-sizing: border-box;
     -webkit-transition: all 0.35s ease;
     transition: all 0.35s ease;
     
   }
-  .snip1226 li {
+  .nav-links li {
     display: inline-block;
     list-style: outside none none;
     margin: 0 1.5em;
     overflow: hidden;
   }
-  .snip1226 a {
+  .nav-links a {
     padding: 0.3em 0;
     color: black;
     position: relative;
@@ -115,13 +115,13 @@ ul>li:hover{
     margin: 0;
     text-decoration: none;
   }
-  .snip1226 a:before,
-  .snip1226 a:after {
+  .nav-links a:before,
+  .nav-links a:after {
     position: absolute;
     -webkit-transition: all 0.35s ease;
     transition: all 0.35s ease;
   }
-  .snip1226 a:before {
+  .nav-links a:before {
     bottom: 100%;
     display: block;
     height: 3px; 
@@ -129,7 +129,7 @@ ul>li:hover{
     content: "";
     background-color: #917c6f;
   }
-  .snip1226 a:after {
+  .nav-links a:after {
     padding: 0.3em 0;
     position: absolute;
     bottom: 100%;
@@ -138,8 +138,8 @@ ul>li:hover{
     color: black;
     white-space: nowrap;
   }
-  .snip1226 li:hover a,
-  .snip1226 .current a {
+  .nav-links li:hover a,
+  .nav-links .current a {
     transform: translateY(100%);
   }
 
@@ -193,7 +193,7 @@ display: block;
 background-color: #999999;
 }
 
-#projets{
+.projets{
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
